# Adventure

./: .cproject  .gitignore  .project  Adventure.kdev4  CMakeLists.txt  Makefile  README.md  Readme.md  TODOs.txt  build.sh  images.txt  level.txt  linux.cproject  macosx.cproject  textures  thoughts.txt  todos
.kdev4/: Adventure.kdev4
src/: BaseFramework.cpp  BaseFramework.hpp  Campaign.cpp  Elements.cpp  Elements.hpp  Entity.cpp  Entity.hpp  EntityMap.cpp  EntityMap.hpp  GameMain.cpp  GeometricPrimitives.hpp  Master.cpp  Matrix.hpp  PhysicsMap.cpp  PhysicsMap.hpp  PlatformInterface.cpp  PlatformInterface.hpp  SideScrollingMap.hpp  SideScrollingView.cpp  SideScrollingView.hpp  stdinclude.hpp
stuff/: Eclipse-Coding-Style.xml  thoughts.txt
